--- a/javascript.html
+++ b/javascript.html
@@ -1,43 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-  
-body{
-    background-color: blueviolet;
-}
 
     </style>
 </head>
+
 <body>
+    <script>
+        for (let i = 0; i <= 20; i += 2) {
+            document.write(i);
+            document.write("<br>")
+        }
 
-<!-- <button type="button" onclick="myFunction()">lightblue</button>
-<button type="button" onclick="myFunction()">purple</button>
-<button type="button" onclick="myFunction()">lightpink</button>
-<button type="button" onclick="myFunction()">greeneblue</button>
-<script>
+    </script>
+    <br> <br>
+    <script>
+        for (let i = 1; i <= 20; i += 2) {
+            document.write(i);
+            document.write("<br>")
+        }
 
-function myFunction() {
-  document.body.style.backgroundColor = " hsl(237, 100%, 78%)";
- 
+    </script>
+    <br> <br>
+    <script>
 
-  document.body.style.backgroundColor = " hsl(277, 94%, 66%)";
-  document.body.style.backgroundColor = " hsl(308, 59%, 50%)";
-  document.body.style.backgroundColor = " hsl(164, 59%, 50%)"; }
-</script> -->
+        n = 5;
+        for (let i = 1; i <= 10; ++i) {
+            document.write(n + " * " + i + " = " + n * i + " ");
+            document.write("<br>")
+        }
+    </script>
+    <br><br>
+    <script>
 
+        n = 3;
+        for (let i = 1; i <= 10; ++i) {
+            document.write(n + " * " + i + " = " + n * i + " ");
+            document.write("<br>")
+        }
+    </script>
+    <br><br>
+    <script>
 
-
-<!-- <div class="demo2" id="demo2"></div>
-
-<button onclick="document.getElementById('demo2').style.backgroundImage = '"></button><br><br>
-<button onclick="document.getElementById('demo2').style.backgroundColor = 'hsl(277, 94%, 66%)'">purple</button><br><br>
-<button onclick="document.getElementById('demo2').style.backgroundColor = '#fa577d'">lightpink</button><br><br>     
-<button onclick="document.getElementById('demo2').style.backgroundColor = 'rgb(87, 244, 250)'">greenishlue</button>
- -->
+        n = 6;
+        for (let i = 1; i <= 10; ++i) {
+            document.write(n + " * " + i + " = " + n * i + " ");
+            document.write("<br>")
+        }
+    </script>
+     <br><br>
+     <script>
+       let a = 0, b = 1, c;
+  document.write(a);
+  document.write(b);
+  for (let i = 2; i < n; i++) {
+    c = a + b;
+    document.write(c);
+    a = b;
+    b = c;
+  }
+</script>
 
 </body>
-</html>
+ </html>
